# ollama-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ollama_client.py  pyproject.toml  reporte_revision.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.memory-bank/: CONTEXT.md  MEMORY.md  REFERENCE.md  agent-sessions.md  progress.md  systemPatterns.md
.memory-bank/topics/: _index.md  cache-policy.md  mocking-semantics.md  shim-pattern.md
docs/plans/: 2026-07-12-001-fix-client-resilience-and-quality-gates-plan.md
ollama_client/: __init__.py  __main__.py  _cache.py  _config.py  _lock.py  _transport.py  _version.py  chat.py  cli.py  embedding.py  generation.py  models.py  vision.py
tests/: conftest.py  test_cache.py  test_cli.py  test_contract.py  test_embedding.py  test_fallback.py  test_lock.py  test_models.py  test_transport.py  test_version.py  test_vision.py
