[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ollama-client"
version = "1.0.0"
description = "Shared local-Ollama HTTP client for the cross-CLI harness: generate / generate_fallback / chat / embed / ocr_image over http://localhost:11434, with a deterministic-prompt response cache and a versioned public API (SemVer + require() gate) for decoupled ecosystem consumers. Graduated from ~/.claude/scripts/ollama_client.py."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "ollama", "llm", "local", "embed", "cache", "harness"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
ollama-client = "ollama_client:main"

[tool.hatch.build.targets.wheel]
packages = ["ollama_client.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
