[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ollama-client"
version = "1.0.0"
description = "Shared local-Ollama HTTP client for the cross-CLI harness: generate / generate_fallback / chat / embed / ocr_image over http://localhost:11434, with a deterministic-prompt response cache and a versioned public API (SemVer + require() gate) for decoupled ecosystem consumers. Graduated from ~/.claude/scripts/ollama_client.py."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "ollama", "llm", "local", "embed", "cache", "harness"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
ollama-client = "ollama_client:main"

[tool.hatch.build.targets.wheel]
packages = ["ollama_client"]

[tool.hatch.build.targets.sdist]
include = ["ollama_client", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# __init__.py re-exports internals (_post, _cache_key, ...) for mock-patching
# parity with the prior flat module — they are intentionally "unused" locally.
[tool.ruff.lint.per-file-ignores]
"ollama_client/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Tell type-checkers the package root so relative imports resolve in-editor.
[tool.pyright]
include = ["ollama_client", "tests"]
pythonVersion = "3.11"
